# libratbag-cpp

./: .bazelrc  .gitignore  MODULE.bazel  README.md  TODO.md  extension.bzl
external_bazel_template/: BUILD.bazel.hidapi  deps.bzl
hooks/: .pre-commit-config.yaml  BUILD.bazel
ratbag/cli/: BUILD.bazel  cli.cpp
ratbag/lib/: BUILD.bazel  device.cpp  device.hpp  device_concepts.hpp  device_dynamic.hpp  device_variant.hpp  driver.hpp  hid_device.cpp  hid_device.hpp  libratbag.hpp
ratbag/lib/common/: BUILD.bazel  led.hpp  profile.hpp
ratbag/lib/common/tests/: BUILD.bazel  led_test.cpp
ratbag/lib/driver/: BUILD.bazel  driver.hpp  driver_like.hpp
ratbag/lib/driver/drivers/hidpp20/: BUILD.bazel  hidpp20.hpp
ratbag/lib/driver/drivers/steelseries/: BUILD.bazel  steelseries.hpp
ratbag/lib/driver/drivers/test_dummy/: BUILD.bazel  test_dummy.hpp
ratbag/lib/driver/tests/: BUILD.bazel  driver_test.cpp  hid_mocked.c
ratbag/lib/drivers/: BUILD.bazel  driver.cpp  driver.hpp  hidpp20.hpp  steelseries.hpp
ratbag/lib/drivers_concepts/: BUILD.bazel  driver.cpp  driver.hpp  driver_like.hpp  hidpp20.hpp  steelseries.hpp  typelists(1).cpp
ratbag/lib/drivers_dynamic/: BUILD.bazel  driver.cpp  driver.hpp  hidpp20.hpp  steelseries.hpp
ratbag/lib/drivers_variant/: BUILD.bazel  driver.cpp  driver.hpp  hidpp20.hpp  steelseries.hpp
ratbag/lib/hidapi/: BUILD.bazel  device.cpp  device.hpp  device_info.cpp  device_info.hpp  device_info_test.cpp
ratbag/lib/hidapi/detail/: BUILD.bazel  bus_type_to_string.hpp  hid_bus_type.cpp  hid_bus_type.hpp
ratbag/lib/hidapi/detail/tests/: BUILD.bazel  bus_type_to_string_test.cpp
ratbag/lib/hidapi/tests/: BUILD.bazel  device_info_test.cpp  device_info_test_mock.cpp  device_test.cpp  hid_mocked.c
ratbag/lib/profile/: BUILD.bazel  led.hpp  profile.hpp
ratbag/lib/profile/tests/: BUILD.bazel  led_test.cpp  profile_test.cpp
ratbag/lib/tests/: BUILD.bazel  device_test.cpp  hid_mocked.c
ratbag/lib/utils/: BUILD.bazel  bitmask_operators.hpp
ratbag/lib/utils/tests/: BUILD.bazel  test_bitmask_operators.cpp  test_bitmask_operators_death.cpp
src/: BUILD.bazel
