module(name = "libratbag")

bazel_dep(name = "toolchains_llvm", version = "1.6.0")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "rules_cc", version = "0.2.16")

# for precommit hooks https://gitlab.arm.com/bazel/pre-commit-hooks
bazel_dep(name = "pre-commit", version = "1.0.9")
bazel_dep(name = "pre-commit-hooks", version = "1.3.1")
bazel_dep(name = "rules_python", version = "1.8.1")

non_module_deps = use_extension("//:extension.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "hidapi",
)

############################################################################
# configure llvm toolchain
############################################################################
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    cxx_standard = {"": "c++23"},
    llvm_versions = {
        "": "latest",
    },
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")
############################################################################

############################################################################
# configure hdron plugin
############################################################################
python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    # TODO: remove this when `ignore_root_user_error` is hermetic
    # https://github.com/bazelbuild/rules_python/issues/2016
    ignore_root_user_error = True,
    python_version = "3.10",
)
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.12",
)

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
