load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "device",
    srcs = [
        "device.cpp",
    ],
    hdrs = [
        "device.hpp",
    ],
    deps = [
        "//ratbag/lib/common",
    ],
)

cc_library(
    name = "lib",
    hdrs = [
        "libratbag.hpp",
    ],
    visibility = ["//ratbag/cli:__pkg__"],
    deps = [
        ":device",
        "//ratbag/lib/hidapi",
    ],
)
