load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "lib",
    hdrs = [
        "libratbag.hpp",
    ],
    visibility = ["//ratbag/cli:__pkg__"],
    deps = [
        ":device",
    ],
)

cc_library(
    name = "device",
    hdrs = [
        "device.hpp",
    ],
    visibility = [
        "//ratbag/lib/tests:__pkg__",
    ],
    deps = [
        "//ratbag/lib/driver",
        "//ratbag/lib/profile",
    ],
)
