load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "common",
    hdrs = [
        "button.hpp",
        "led.hpp",
        "macro.hpp",
        "profile.hpp",
        "resolution.hpp",
    ],
    deps = ["//ratbag/lib/utils:bitmask_operators"],
    visibility = ["//ratbag/lib:__subpackages__"],
)
