load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "drivers",
    hdrs = [
        "driver.hpp",
        "hidpp20.hpp",
        "steelseries.hpp",
        "driver_like.hpp"
    ],
    visibility = ["//ratbag/lib:__subpackages__"],
    deps = [
        "//ratbag/lib/hidapi",
        "//ratbag/lib/common",
    ],
)
