load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "hidapi",
    srcs = [
        "device.cpp",
        "device_info.cpp",
    ],
    hdrs = [
        "device.hpp",
        "device_info.hpp",
    ],
    cxxopts = [
        # wstring_convert<std::codecvt_utf8<wchar_t>>' is deprecated
        "-Wno-deprecated-declarations",
    ],
    visibility = ["//ratbag/lib:__subpackages__"],
    deps = [
        "//ratbag/lib/hidapi/detail:hid_bus_type",
        "@hidapi",
    ],
)
