load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "hidapi_test",
    srcs = ["device_info_test.cpp"],
    cxxopts = [
        "-Wno-deprecated-declarations",
    ],
    deps = [
        "//ratbag/lib/hidapi",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "hidapi_test_mocked",
    srcs = [
        "device_info_test_mock.cpp",
        "hid_mocked.c",
    ],
    # linkopts = [
    #     "-Wl,--wrap,hid_enumerate",
    # ],
    deps = [
        # ":mocked_hidapi",
        "//ratbag/lib/hidapi",
        "@googletest//:gtest_main",
    ],
)
