load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "device_info_test",
    srcs = ["device_info_test.cpp"],
    cxxopts = [
        # wstring_convert<std::codecvt_utf8<wchar_t>>' is deprecated
        "-Wno-deprecated-declarations",
    ],
    deps = [
        "//ratbag/lib/hidapi",
        "@googletest//:gtest_main",
    ],
)

# TODO(ask): Help me make sense of what happens here.
#            I was able to overwrite hid_enumerate symbol from from hidapi.so with my own... and there was no error.
#            Shouldn't i get an ODR violation of redeclarion of a symbol.
#            I wasn't able to overwrite with linker --wrap, it seems like all
#            "hid_enumerate" symbol was resolved and stripped in
#            bazel-bin/ratbag/lib/hidapi/libhidapi.so
cc_test(
    name = "device_info_test_mocked",
    srcs = [
        "device_info_test_mock.cpp",
        "hid_mocked.c",
    ],
    # linkopts = [
    #     "-Wl,--wrap,hid_enumerate",
    # ],
    deps = [
        # ":mocked_hidapi",
        "//ratbag/lib/hidapi",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "device_test",
    srcs = ["device_test.cpp"],
    cxxopts = [
        # wstring_convert<std::codecvt_utf8<wchar_t>>' is deprecated
        "-Wno-deprecated-declarations",
    ],
    deps = [
        "//ratbag/lib/hidapi",
        "@googletest//:gtest_main",
    ],
)
